<resources>
    <string name="app_name">NavigationExample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--Login & register -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="changeLang">Change the language</string>
    <string name="register">Register</string>
    <string name="logInFail">Wrong email or password</string>
    <string name="connectionError">Connection Error</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="insertPass">Please Insert Password</string>
    <string name="insertEmail">Please Insert Email</string>
    <string name="registerSuccess">Registration was successful!</string>
    <string name="registerFail">Registration failed!</string>
    <string name="fieldError">Field can\'t be empty</string>
    <string name="invalidEmail">Please enter a valid email</string>
    <string name="invalidPass">Password is too weak</string>
    <string name="invalidName">Name is too long</string>
    <string name="saveChanges">Save</string>
    <string name="welcome">Welcome!</string>
    <string name="editProfile">Edit Profile</string>
    <string name="logOut">Log Out</string>
    <string name="loggedOut">Logged out!</string>
    <string name="account">Account</string>
    <string name="transactions">Transactions</string>
    <string name="home">Home</string>
    <string name="activity_account_number">Receiver\'s account number</string>
    <string name="confirm">Confirm</string>
    <string name="amountofmoney">Amount to Deposit</string>
    <string name="addMoney">Deposit Money</string>
    <string name="limit">change the withdrawal limit</string>
    <string name="Withdraw">Withdraw</string>
    <string name="withdrawal">Amount to Withdraw</string>
    <string name="limit2">New credit limit</string>
    <string name="balance">Balance</string>
    <string name="withdrawlimit">Withdraw Limit</string>
    <string name="selectType">Select an account</string>
    <string name="accountNum">Account Number</string>
    <string name="creditLimit">Credit Limit</string>
    <string name="transfer">Transfer</string>
    <string name="changeCred">Change credit limit</string>
    <string name="interestRate">Check interest rate</string>
    <string name="transferMoney">Amount to Transfer</string>
    <string name="newWIthdraw">New withdraw limit</string>
    <string name="createCard">Create a bankcard first</string>
    <string name="newAccount">Create new accounts</string>
    <string name="bankCard">Bankcard</string>
    <string name="maxAccount">You already have three accounts!</string>
    <string name="maxCard">You already have a bankcard!</string>
    <string name="firstCreate">First create a bankcard!</string>
    <string name="AccNumActivity">Choose the account type to create and press confirm</string>
    <string name="invalidName2">Please enter a valid name</string>
    <string name="passwordmatch">Please make sure your passwords match</string>
    <string name="account8">Account number must be 8 digits</string>
    <string name="account7">Account number must be 7 digits</string>
    <string name="invalidAccNum">Invalid account number, please try again</string>
    <string name="negBalance">Balance can\'t be negative</string>
    <string name="maxDeposit">You can deposit one million at once</string>
    <string name="invalidAmount">Please enter a valid amount</string>
    <string name="negWithdraw">Withdrawal can\'t be negative</string>
    <string name="maxTransfer">Transfer limit is 1 000 000€</string>
    <string name="maxCred">Credit limit is 50 000€</string>
    <string name="maxWithdraw">Withdrawal limit is 50 000€</string>
    <string name="noAccounts">You have no accounts</string>
    <string name="noAccounts2">You have no accounts, please go back and create one</string>
    <string name="notEnoughBalance">Not enough balance</string>
    <string name="limitError">Withdrawal limit exceeded!</string>
    <string name="interestRateIs">Your interest rate is</string>
    <string name="createBankCard">Create a bankcard</string>
    <string name="creditAccount">Credit Account</string>
    <string name="savingsAccount">Savings Account</string>
    <string name="regularAccount">Regular Account</string>
    <string name="takenEmail">Email is already used!</string>
    <string name="changesSaved">Changes saved successfully!</string>
    <string name="changesFail">Saving changes failed!</string>
    <string name="fail">FAIL</string>
    <string name="numberTaken">Account number is already taken!</string>
    <string name="success">Success!</string>
    <string name="policy">You already have one Regular account, please read more about our banks policy</string>
    <string name="depositSuc">Deposit successful</string>
    <string name="depositFail">Deposit failed</string>
    <string name="credChange">Credit limit changed!</string>
    <string name="credChangeFail">Changing the credit limit failed!</string>
    <string name="withDrawfail">Withdrawal failed</string>
    <string name="transferFail">Transfer failed!</string>
    <string name="transferSuc">Transfer was successful!</string>
    <string name="noAccFound">No account found with that number</string>
    <string name="cardSucc">Bankcard created!</string>
    <string name="withChange">Withdrawal limit changed!</string>
    <string name="withChangeFail">Withdrawal limit change failed!</string>
    <string name="policy2">You already have one Savings account, please read more about our banks policy</string>
    <string name="policy3">You already have one Credit account, please read more about our banks policy</string>
    <string name="wrongInputs">Wrong email or password</string>
</resources>
