<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="80dp"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="362dp"
        android:layout_height="139dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/banklogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo">
        <EditText
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:id="@+id/email"
            android:textColor="@color/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutemail">
        <EditText
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/password"
            android:textColor="@color/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_marginTop="35dp"
        android:layout_below="@id/layoutpassword"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-1dp"
        android:backgroundTint="@color/colorPrimary2"
        android:text="@string/login"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/link_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="298dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/changeLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="29dp"
        android:gravity="center"
        android:text="@string/changeLang"
        android:textColor="@color/colorAccent" />


</RelativeLayout>